[gd_scene load_steps=13 format=2]

[ext_resource path="res://Environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/flag/flag1.png" type="Texture" id=6]
[ext_resource path="res://assets/flag/flag2.png" type="Texture" id=7]
[ext_resource path="res://assets/font/MedievalSharp-Book.otf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5000, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 11.375 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
font_data = ExtResource( 8 )

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Environment" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
tile_data = PoolIntArray( -1048679, 6, 0, -1048670, 5, 0, -655513, 12, 0, -655506, 13, 0, -655504, 13, 0, -655502, 13, 0, -655500, 14, 0, -655490, 12, 0, -655483, 13, 0, -655481, 13, 0, -655479, 14, 0, -393302, 5, 0, -131023, 0, 0, 393138, 12, 0, 393145, 13, 0, 393147, 13, 0, 393149, 13, 0, 393151, 13, 0, 393153, 13, 0, 393155, 13, 0, 393157, 13, 0, 393159, 13, 0, 393161, 13, 0, 393163, 13, 0, 393165, 13, 0, 393167, 13, 0, 393169, 13, 0, 393171, 13, 0, 393173, 14, 0, 327748, 1, 0, 458603, 6, 0, 458605, 6, 0, 458607, 6, 0, 458609, 6, 0, 458611, 6, 0, 458613, 6, 0, 458615, 6, 0, 458617, 6, 0, 458619, 6, 0, 458621, 6, 0, 458623, 6, 0, 458625, 6, 0, 458627, 6, 0, 524254, 1, 0, 524319, 12, 0, 524325, 13, 0, 524327, 13, 0, 524329, 13, 0, 524331, 13, 0, 524333, 13, 0, 524335, 13, 0, 524337, 14, 0, 720890, 1, 0, 655375, 3, 0, 1507343, 1, 0, 1966058, 1, 0, 1966064, 1, 0, 1966069, 1, 0, 1966073, 1, 0, 1966077, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.3, 0.35 )
smoothing_enabled = true

[node name="Killplane" type="Area2D" parent="."]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killplane"]
position = Vector2( 0, 450 )
shape = SubResource( 1 )

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( -189, 32 )

[node name="Enemy1" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 343, -23 )
scale = Vector2( 2, 2 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -55, -40 )
scale = Vector2( 3, 3 )
can_be_killed_by_0 = false

[node name="Enemy3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( 130, 51 )
scale = Vector2( 0.5, 0.5 )
can_be_killed_by_2 = true

[node name="Enemy4" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -382, -99 )
scale = Vector2( 3, 3 )
can_be_killed_by_0 = false

[node name="Enemy5" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -297, -96 )
scale = Vector2( 3, 3 )
can_be_killed_by_0 = false

[node name="HUD" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -582, 16 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="Flag" type="Area2D" parent="."]
position = Vector2( -533, 10 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag"]
position = Vector2( -49, 4.375 )
shape = SubResource( 3 )

[node name="left" type="Label" parent="."]
margin_left = 330.0
margin_top = -33.0
margin_right = 434.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Go Left"

[connection signal="enemy_collided" from="Player" to="." method="_on_Player_enemy_collided"]
[connection signal="body_entered" from="Killplane" to="." method="_on_Area2D_body_entered"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="body_entered" from="Flag" to="." method="_on_Flag_body_entered"]
